fix: unable to select on safari

--- a/src/components/CodeEditor/codemirror/style.module.scss
+++ b/src/components/CodeEditor/codemirror/style.module.scss
@@ -1,6 +1,4 @@
 .root {
-	user-select: all;
-	-webkit-user-select: all;
 	min-height: 0;
 	flex: 1;
 
